apps/mastercard-processor/mastercard-processor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mastercard-processor
  labels:
    app: mastercard-processor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mastercard-processor
  template:
    metadata:
      labels:
        app: mastercard-processor
    spec:
      containers:
        - name: mastercard-processor
          image: "docker.io/burrsutter/hello:1.0.0"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
