apps/mastercard-processor/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mastercard-processor
  labels:    
    app: mastercard-processor
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: mastercard-processor
